# CPU

./: .gitignore  CMakeLists.txt  README.md  funny2.s  main.h
ALU/: ALU Logic arch.txt  ALU Logic unit arch.txt  ALU decoder arch.txt  ALU.chp  ALU.fus  ALU.jed  ALU.pld  LogicUnit.chp  LogicUnit.jed  LogicUnit.pld  test.pld
include/: decoder_def.h  main.h  parser.h  remake.h
src/: Decoder.c  Functions.c  functions.cpp  main.c  main.cpp  output.hex  remake.c  subprogram.c
